src/llvm/lto.nim


proc thinltoCodegenSetPicModel*(cg: ThinltoCodeGenT; a2: LtoCodegenModel): LtoBoolT {. cdecl, importc: "thinlto_codegen_set_pic_model", dynlib: LLVMlib.}
## *
##  Sets the path to a directory to use as a storage for temporary bitcode files.
##  The intention is to make the bitcode files available for debugging at various
##  stage of the pipeline.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenSetSavetempsDir*(cg: ThinltoCodeGenT; saveTempsDir: cstring) {. cdecl, importc: "thinlto_codegen_set_savetemps_dir", dynlib: LLVMlib.}
## *
##  Set the path to a directory where to save generated object files. This
##  path can be used by a linker to request on-disk files instead of in-memory
##  buffers. When set, results are available through
##  thinlto_module_get_object_file() instead of thinlto_module_get_object().
##
##  \since LTO_API_VERSION=21
##

proc thinltoSetGeneratedObjectsDir*(cg: ThinltoCodeGenT; saveTempsDir: cstring) {. cdecl, importc: "thinlto_set_generated_objects_dir", dynlib: LLVMlib.}
## *
##  Sets the cpu to generate code for.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenSetCpu*(cg: ThinltoCodeGenT; cpu: cstring) {.cdecl, importc: "thinlto_codegen_set_cpu", dynlib: LLVMlib.}
## *
##  Disable CodeGen, only run the stages till codegen and stop. The output will
##  be bitcode.
##
##  \since LTO_API_VERSION=19
##

proc thinltoCodegenDisableCodegen*(cg: ThinltoCodeGenT; disable: LtoBoolT) {.cdecl, importc: "thinlto_codegen_disable_codegen", dynlib: LLVMlib.}
## *
##  Perform CodeGen only: disable all other stages.
##
##  \since LTO_API_VERSION=19
##

proc thinltoCodegenSetCodegenOnly*(cg: ThinltoCodeGenT; codegenOnly: LtoBoolT) {. cdecl, importc: "thinlto_codegen_set_codegen_only", dynlib: LLVMlib.}
## *
##  Parse -mllvm style debug options.
##
##  \since LTO_API_VERSION=18
##

proc thinltoDebugOptions*(options: cstringArray; number: cint) {.cdecl, importc: "thinlto_debug_options", dynlib: LLVMlib.}
## *
##  Test if a module has support for ThinLTO linking.
##
##  \since LTO_API_VERSION=18
##

proc ltoModuleIsThinlto*(`mod`: LtoModuleT): LtoBoolT {.cdecl, importc: "lto_module_is_thinlto", dynlib: LLVMlib.}
## *
##  Adds a symbol to the list of global symbols that must exist in the final
##  generated code. If a function is not listed there, it might be inlined into
##  every usage and optimized away. For every single module, the functions
##  referenced from code outside of the ThinLTO modules need to be added here.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenAddMustPreserveSymbol*(cg: ThinltoCodeGenT; name: cstring;length: cint) {.cdecl, importc: "thinlto_codegen_add_must_preserve_symbol", dynlib: LLVMlib.}
## *
##  Adds a symbol to the list of global symbols that are cross-referenced between
##  ThinLTO files. If the ThinLTO CodeGenerator can ensure that every
##  references from a ThinLTO module to this symbol is optimized away, then
##  the symbol can be discarded.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenAddCrossReferencedSymbol*(cg: ThinltoCodeGenT; name: cstring;length: cint) {.cdecl, importc: "thinlto_codegen_add_cross_referenced_symbol", dynlib: LLVMlib.}
## *
##  @} // endgoup LLVMCTLTO
##  @defgroup LLVMCTLTO_CACHING ThinLTO Cache Control
##  @ingroup LLVMCTLTO
##
##  These entry points control the ThinLTO cache. The cache is intended to
##  support incremental builds, and thus needs to be persistent across builds.
##  The client enables the cache by supplying a path to an existing directory.
##  The code generator will use this to store objects files that may be reused
##  during a subsequent build.
##  To avoid filling the disk space, a few knobs are provided:
##   - The pruning interval limits the frequency at which the garbage collector
##     will try to scan the cache directory to prune expired entries.
##     Setting to a negative number disables the pruning.
##   - The pruning expiration time indicates to the garbage collector how old an
##     entry needs to be to be removed.
##   - Finally, the garbage collector can be instructed to prune the cache until
##     the occupied space goes below a threshold.
##  @{
##
## *
##  Sets the path to a directory to use as a cache storage for incremental build.
##  Setting this activates caching.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenSetCacheDir*(cg: ThinltoCodeGenT; cacheDir: cstring) {.cdecl, importc: "thinlto_codegen_set_cache_dir", dynlib: LLVMlib.}
## *
##  Sets the cache pruning interval (in seconds). A negative value disables the
##  pruning. An unspecified default value will be applied, and a value of 0 will
##  force prunning to occur.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenSetCachePruningInterval*(cg: ThinltoCodeGenT; interval: cint) {. cdecl, importc: "thinlto_codegen_set_cache_pruning_interval", dynlib: LLVMlib.}
## *
##  Sets the maximum cache size that can be persistent across build, in terms of
##  percentage of the available space on the disk. Set to 100 to indicate
##  no limit, 50 to indicate that the cache size will not be left over half the
##  available space. A value over 100 will be reduced to 100, a value of 0 will
##  be ignored. An unspecified default value will be applied.
##
##  The formula looks like:
##   AvailableSpace = FreeSpace + ExistingCacheSize
##   NewCacheSize = AvailableSpace * P/100
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenSetFinalCacheSizeRelativeToAvailableSpace*(
    cg: ThinltoCodeGenT; percentage: cuint) {.cdecl, importc: "thinlto_codegen_set_final_cache_size_relative_to_available_space", dynlib: LLVMlib.}
## *
##  Sets the expiration (in seconds) for an entry in the cache. An unspecified
##  default value will be applied. A value of 0 will be ignored.
##
##  \since LTO_API_VERSION=18
##

proc thinltoCodegenSetCacheEntryExpiration*(cg: ThinltoCodeGenT; expiration: cuint) {. cdecl, importc: "thinlto_codegen_set_cache_entry_expiration", dynlib: LLVMlib.}
## *
##  Sets the maximum size of the cache directory (in bytes). A value over the
##  amount of available space on the disk will be reduced to the amount of
##  available space. An unspecified default value will be applied. A value of 0
##  will be ignored.
##
##  \since LTO_API_VERSION=22
##

proc thinltoCodegenSetCacheSizeBytes*(cg: ThinltoCodeGenT; maxSizeBytes: cuint) {. cdecl, importc: "thinlto_codegen_set_cache_size_bytes", dynlib: LLVMlib.}
## *
##  Same as thinlto_codegen_set_cache_size_bytes, except the maximum size is in
##  megabytes (2^20 bytes).
##
##  \since LTO_API_VERSION=23
##

proc thinltoCodegenSetCacheSizeMegabytes*(cg: ThinltoCodeGenT;maxSizeMegabytes: cuint) {.cdecl, importc: "thinlto_codegen_set_cache_size_megabytes", dynlib: LLVMlib.}
## *
##  Sets the maximum number of files in the cache directory. An unspecified
##  default value will be applied. A value of 0 will be ignored.
##
##  \since LTO_API_VERSION=22
##

proc thinltoCodegenSetCacheSizeFiles*(cg: ThinltoCodeGenT; maxSizeFiles: cuint) {. cdecl, importc: "thinlto_codegen_set_cache_size_files", dynlib: LLVMlib.}
## *
##  @} // endgroup LLVMCTLTO_CACHING
##
